# so101-vla-pipeline

./: .gitignore  .gitmodules  README.md  gripper_telemetry.py  hardware_server.py  main_act.py  main_act_goal_onehot.py  main_real2.py  octo_server.py  pyproject.toml  requirements.txt
agents/: remote_agent.py
application/: __init__.py  camera_source.py
configs/vp_vla/: so101_file000_005_single_3090.yaml
controllers/: base_ctrl.py
docs/: ARCHITECTURE.md
envs/: real_env_client.py
proto/: vla.proto  vla_pb2.py  vla_pb2_grpc.py
scripts/train/: build_act_goal_onehot_dataset.py  finetune_so101.py  full_finetuning_so101_fruit_raw_h4_binary.py  octo_grounding_head.py  train_act_so101.py
so101_pipeline/: __init__.py
so101_pipeline/agents/: base_agent.py  qwen_vp_event_trigger.py  remote_agent.py  vp_vla_remote_agent.py
so101_pipeline/controllers/: ik_ctrl.py
so101_pipeline/envs/: real_env_client.py
so101_pipeline/interfaces/: __init__.py  app_video_process.py  command_bridge.py
so101_pipeline/perception/: __init__.py  vp_runtime_overlay.py
so101_pipeline/proto/: __init__.py  vla_pb2_grpc.py
so101_pipeline/runtime/: __init__.py  main_act.py  main_act_goal_onehot.py  main_real2.py
so101_pipeline/servers/: __init__.py  hardware_server.py  octo_server.py
