[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "so101-vla-pipeline"
version = "0.1.0"
description = "SO-101 real-robot VLA pipeline with pluggable policy backends (Octo, ACT, VP-VLA)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "kangkb7701" }]
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "grpcio",
    "protobuf",
    "pyzmq",
    "fastapi",
    "uvicorn",
    "msgpack",
    "pillow",
]

[project.optional-dependencies]
# Octo 백엔드는 octo(rail-berkeley)를 별도 설치해야 함 (pip 패키지 아님) — README 참고
act = ["lerobot", "torch"]
vp = ["transformers", "torch"]

[project.scripts]
# 설치 후 CLI 별칭. (모듈 실행도 가능: python -m so101_pipeline.runtime.main_real2)
octo-server = "so101_pipeline.servers.octo_server:serve"
hardware-server = "so101_pipeline.servers.hardware_server:main"
so101-octo = "so101_pipeline.runtime.main_real2:main"
so101-act = "so101_pipeline.runtime.main_act:main"

[tool.setuptools.packages.find]
include = ["so101_pipeline*"]

[tool.setuptools.package-data]
so101_pipeline = ["assets/*.urdf", "proto/*.proto"]
